# modern-cpp-cuda-cmake-template

./: .clang-tidy  CMakeLists.txt
core/: CMakeLists.txt  pub.cpp
core/include/: pub.h
core/src/: main.cc
cuda_lib/: CMakeLists.txt
cuda_lib/include/: cuda_lib.h
cuda_lib/src/: bgra2yuv.cu  histogram.cu
msg/: CMakeLists.txt
msg/idl/: Header.idl  Image.idl  ImageSHM.idl  Time.idl
msg/include/: Header.h  HeaderPubSubTypes.h  Image.h  ImagePubSubTypes.h  ImageSHM.h  ImageSHMPubSubTypes.h  Time.h  TimePubSubTypes.h
msg/src/: Header.cxx  HeaderPubSubTypes.cxx  Image.cxx  ImagePubSubTypes.cxx  ImageSHM.cxx  ImageSHMPubSubTypes.cxx  Time.cxx  TimePubSubTypes.cxx
test/: CMakeLists.txt
